# volleymanager

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
apps/api/app/: __init__.py  enums.py  main.py
apps/api/app/api/v1/: __init__.py  admin.py  athletes.py  clubs.py  health.py  lootbox.py  market.py  matches.py  me.py  odds.py  online.py  physio.py  store.py  tournaments.py
apps/api/app/core/: bootstrap.py  config.py  database.py  deps.py  security.py
apps/api/app/engine/: __init__.py  cpu.py  ct.py  generation.py  match_engine.py  progression.py  training.py
apps/api/app/models/: __init__.py  athlete.py  challenge.py  club.py  hire_listing.py  lootbox.py  odd.py  sale_request.py  store.py  tournament.py  user_state.py
apps/api/app/repositories/: athlete_repo.py  club_repo.py  user_repo.py
apps/api/app/schemas/: admin.py  athlete.py  club.py  lootbox.py  market.py  match.py  odd.py  online.py  store.py  tournament.py  user.py
apps/api/app/services/: admin_service.py  athlete_service.py  lootbox_service.py  market_service.py  match_service.py  odd_service.py  onboarding.py  online_service.py  physio_service.py  play_service.py  sales_service.py  store_service.py  tournament_service.py  training_service.py  user_service.py
apps/api/app/ws/: __init__.py  match_hub.py
apps/api/tests/: test_engine.py
db/: policies.sql  schema.sql  seed.sql  supabase_schema.sql  supabase_setup.sql
docs/: ARCHITECTURE.md  COMO_JOGAR.md  DATABASE.md  (+2 more)
(+60 files in other folders)
